--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -12,6 +12,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <style>
+    html,
+    body {
+        height: 100%;
+    }
+
+    body {
+        background-color: #eee;
+    }
+
+    .container-main {
+        min-height: calc(100vh - 15%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 </style>
 
 <body>
@@ -34,29 +49,33 @@
                         <a class="nav-link" href="#">Register</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
     <!-- navbar ends -->
-    <div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
-        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
-            <div class="col-md-6  mx-auto my-5">
-                <h2 class="display-4 fw-bold">Selamat datang di</h2>
-                <h1 class="display-1 fw-bold">Marmut - 9</h1>
-                <h3 class="fw-normal text-muted mb-3">Tugas Kelompok Basdat B9</h3>
-            </div>
-            <div class="d-flex gap-3 justify-content-center lead fw-normal">
-                <a class="link" href="#">
-                  Login
-                </a>
-                <a class="link" href="#">
-                  Register
-                </a>
-              </div>
+    <div class="container-main">
+        <div class="w-50 p-5">
+            <div class="p-5">
+                <div class="card p-5">
+                    <div class="px-3">
+                        <form>
+                            <h1 class="h3 mb-4 fw-normal text-center">Login</h1>
+                            <div class="form-floating my-2">
+                                <input type="email" class="form-control" id="floatingInput"
+                                    placeholder="name@example.com">
+                                <label for="floatingInput">Email address</label>
+                            </div>
+                            <div class="form-floating my-2">
+                                <input type="password" class="form-control" id="floatingPassword"
+                                    placeholder="Password">
+                                <label for="floatingPassword">Password</label>
+                            </div>
+                            <div class="my-4">
+                                <button class="btn btn-primary w-100 py-2" type="submit">Log in</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
