--- a/main/templates/register/register.html
+++ b/main/templates/register/register.html
@@ -45,20 +45,21 @@
     <div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
             <div class="col-md-6  mx-auto my-5">
-                <h2 class="display-4 fw-bold">Selamat datang di</h2>
-                <h1 class="display-1 fw-bold">Marmut - 9</h1>
-                <h3 class="fw-normal text-muted mb-3">Tugas Kelompok Basdat B9</h3>
+                <h2 class="display-3 fw-bold">Register</h2>
             </div>
             <div class="d-flex gap-3 justify-content-center lead fw-normal">
                 <a class="link" href="#">
-                  Login
+                  Pengguna
                 </a>
                 <a class="link" href="#">
-                  Register
+                  Label
                 </a>
               </div>
             </div>
         </div>
+    </div>
+
+    <div class="container">
     </div>
 
 </body>
