--- a/main/templates/kelola_album_song/kelola_album_song_add.html
+++ b/main/templates/kelola_album_song/kelola_album_song_add.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -45,6 +46,15 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cek Royalti</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Lihat Chart</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Play Podcast</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kelola Podcast</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Logout</a>
