--- a/main/templates/kelola_album_song/kelola_album_song_view.html
+++ b/main/templates/kelola_album_song/kelola_album_song_view.html
@@ -70,6 +70,15 @@
                         <a class="nav-link" href="#">Cek Royalti</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Lihat Chart</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Play Podcast</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kelola Podcast</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Logout</a>
                     </li>
                 </ul>
