--- a/main/templates/lihat_chart/Chart.html
+++ b/main/templates/lihat_chart/Chart.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,32 +9,38 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <title>Chart List</title>
 </head>
+
 <style>
-    .tableFixHead {
-        overflow: auto;
-        height: 500px;
-    }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
 
-    .tableFixHead thead th {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
+        th, td {
+            border: 1px solid black;
+            text-align: left;
+            padding: 8px;
+        }
 
-    table {
-        border-collapse: collapse;
-        width: 100%;
-    }
+        th {
+            background-color: white;
+        }
 
-    th,
-    td {
-        padding: 8px 16px;
-    }
-
-    th {
-        background: #eee;
-    }
+        .button {
+            background-color: blue;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
 </style>
 
 <body>
@@ -90,49 +95,37 @@
         </div>
     </nav>
     <!-- navbar ends -->
+    
     <div class="position-relative overflow-hidden p-1 p-md-3 m-md-3 text-center bg-body-tertiary">
         <div class="col-md-12 p-lg-2 mx-auto my-5">
-            <h1 class="display-4 fw-bold">Kelola Album</h1>
+            <h1 class="display-4 fw-bold">CHART LIST</h1>
         </div>
     </div>
 
-    <div class="container">
-        <div class="py-4">
-            <div class="pb-3">
-                <h2 class="text-center">List Album</h2>
-            </div>
-            <div class="tableFixHead">
-                <table class="table table-striped ">
-                    <thead>
-                        <tr class="text-center ">
-                            <th>Judul</th>
-                            <th>Jumlah Lagu</th>
-                            <th>Total Durasi</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>User-centric scalable concept</td>
-                            <td>11</td>
-                            <td>1031 menit</td>
-                            <td>
-                                <div class="text-center ">
-                                    <div class="p-1">
-                                        <a href="#" class="link-primary">Lihat daftar lagu</a>
-                                    </div>
-                                    <div class="p-1">
-                                        <a href="#" class="link-danger">Hapus</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
+    <table>
+        <thead>
+            <tr>
+                <th style="text-align: center">Tipe</th>
+                <th style="text-align: center">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Daily Top 20</td>
+                <td><a href="#">Lihat Daftar Lagu</a></td>
+            </tr>
+            <tr>
+                <td>Weekly Top 20</td>
+                <td><a href="#">Lihat Daftar Lagu</a></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="2" style="text-align: center;">
+                    <button class="back button">Kembali</button>
+                </td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
-
 </html>
