--- a/melihat_chart/templates/Chart.html
+++ b/melihat_chart/templates/Chart.html
@@ -8,40 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>Chart List</title>
 </head>
-
-<style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid black;
-            text-align: left;
-            padding: 8px;
-        }
-
-        th {
-            background-color: white;
-        }
-
-        .button {
-            background-color: blue;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-</style>
 
 <body>
     <!-- navbar starts -->
@@ -102,7 +70,7 @@
         </div>
     </div>
 
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th style="text-align: center">Tipe</th>
@@ -110,14 +78,20 @@
             </tr>
         </thead>
         <tbody>
+            {% for chart in charts %}
             <tr>
-                <td>Daily Top 20</td>
-                <td><a href="#">Lihat Daftar Lagu</a></td>
-            </tr>
-            <tr>
-                <td>Weekly Top 20</td>
-                <td><a href="#">Lihat Daftar Lagu</a></td>
-            </tr>
+                <td>{{ chart.tipe }}</td>
+                {% if chart.tipe == 'Daily' %}
+                <td><a href="{% url 'ChartDetailDaily' chart.id %}" class="btn btn-primary">Lihat Daftar Lagu</a></td>
+                {% elif chart.tipe == 'Weekly' %}
+                <td><a href="{% url 'ChartDetailWeekly' chart.id %}" class="btn btn-primary">Lihat Daftar Lagu</a></td>
+                {% elif chart.tipe == 'Monthly' %}
+                <td><a href="{% url 'ChartDetailMonthly' chart.id %}" class="btn btn-primary">Lihat Daftar Lagu</a></td>
+                {% elif chart.tipe == 'Yearly' %}
+                <td><a href="{% url 'ChartDetailYearly' chart.id %}" class="btn btn-primary">Lihat Daftar Lagu</a></td>
+                {% endif %}
+            </tr>            
+            {% endfor %}
         </tbody>
         <tfoot>
             <tr>
